fix; correct z-index form

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -34,7 +34,7 @@
     @extend %transition;
     &.open {
       display: block;
-      z-index: 20;
+      z-index: 5;
       @extend %transition;
     }
     .profile-field__label {
